fix(U257): fix truncate nome progetto header e "Ente" bold selettore ruolo 20250218

--- a/fe-piattaforma/src/components/Header/header.scss
+++ b/fe-piattaforma/src/components/Header/header.scss
@@ -75,12 +75,17 @@
     }
   }
 
+  .negative-margin-expand{
+    margin-left: -22px !important;
+  }
+
   .user-description {
+    margin-right: 29px;
    span {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    max-width: 260px;
+    max-width: 300px;
 
     @media screen and (max-width: 767px) {
       font-size: 14px !important;
